<resources>
    <string name="app_name" translatable="false">BatoiLogic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>

    <string name="btLogin">Sign In</string>
    <string name="tvPassword">Password</string>
    <string name="tvName">Nickname</string>

    <string name="activity_login">Login</string>
    <string name="placeholder_nickname" translatable="false">"@"%s</string>
    <string name="itLogOut">Log Out</string>
    <string name="nav_orders">Orders</string>

    <string name="distribution_center">Distribution Center</string>
    <string name="lat_long_snippet" translatable="false">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin" translatable="false">Dropped Pin</string>
    <string name="poi" translatable="false">poi</string>
    <string name="tvStatus">STATUS</string>
    <string name="etObservations">Observations</string>
    <string name="btnCancel">CANCEL</string>
    <string name="btnAccept">ACCEPT</string>

    <string name="welcome">Welcome  </string>
    <string name="empty_fields">Empty Fields</string>
    <string name="interrupted">Interrupted </string>
    <string name="error">Error</string>
    <string name="password_incorrect">Password Incorrect</string>
    <string name="nickname_not_found">Nickname not found</string>
    <string name="network_not_available">Network not available, please try again later</string>
    <string name="address_incorrect">Address Incorrect</string>
    <string name="no_internet">No Internet, try again later!</string>
    <string name="select_the_action">Select The Action</string>
    <string name="no_phone_available">No Phone Available!</string>
    <string name="about_your_order">About your Order</string>
    <string name="send_mail">Send mail...</string>
    <string name="confirmation">Confirmation</string>
    <string name="this_action">"This action cannot be undone, are you sure about updating to %1$s ?"</string>
    <string name="impossible_to_update">Impossible to update STATUS right now!</string>
    <string name="retrieving_information">Retrieving information...</string>
    <string name="action">Action</string>
    <string name="location_not_found">Error Location Not Found</string>
    <string name="order_number">ORDER NUMBER: </string>
    <string name="customer">CUSTOMER: </string>
    <string name="location">LOCATION: </string>
    <string name="ok">Ok</string>
    <string name="alert_location">ORDER NUMBER: %1$s \nCUSTOMER: %2$s \nLOCATION: %3$s</string>
    <string name="location_service_is_needed">Location service is needed ALL THE TIME</string>
    <string name="no_internet_available">No Internet Available</string>

    <string name="direc" translatable="false">C/ Sociedad Muscial, Nº20, 6ºD</string>
    <string name="batoi" translatable="false">CIPFP Batoi</string>
    <string name="num" translatable="false">10</string>
    <string name="customer_customer">1 - Customer Customer</string>
    <string name="permissions_neccesary">This permission is necessary!</string>
    <string name="location_enable">Location MUST be enable!</string>
    <string name="action_refresh">Refresh</string>

    <string-array name="status">
        <item>Out For Delivery</item>
        <item>Delivered</item>
        <item>Not Delivered</item>
    </string-array>

    <string-array name="actions">
        <item>Open Phone</item>
        <item>Open Email</item>
<!--        <item></item>-->
    </string-array>
</resources>
